# OPD_chirality_index

./: CMakeLists.txt  INSTALL.md  README.md  osipov_omp.f90
biphenyl_test/: biphenyl.xyz  plot.gnplt  relax.001.xyz  relax.002.xyz  relax.003.xyz  relax.004.xyz  relax.005.xyz  relax.006.xyz  relax.007.xyz  relax.008.xyz  relax.009.xyz  relax.010.xyz  relax.011.xyz  relax.012.xyz  relax.013.xyz  relax.014.xyz  relax.015.xyz  relax.016.xyz  relax.017.xyz  relax.018.xyz  relax.019.xyz  relax.020.xyz  relax.021.xyz  relax.022.xyz  relax.023.xyz  relax.024.xyz  relax.025.xyz  relax.026.xyz  relax.027.xyz  relax.028.xyz  relax.029.xyz  relax.030.xyz  relax.031.xyz  relax.032.xyz  relax.033.xyz  relax.034.xyz  relax.035.xyz  relax.036.xyz  relax.037.xyz  relax.inp  (+1 more)
src/: mod_cmd_line.f90  mod_constants.f90  mod_error_handling.f90  mod_inquire.f90  mod_products.f90  mod_read_molecule.f90  osipov_omp.f90
